# openGL_2018

./: .gitignore  Cargo.toml
models/: character_blue.mtl
shaders/: frag_texture.glsl  fragment.glsl  fragment_flat.glsl  tess_control.glsl  tess_eval.glsl  vert_texture.glsl  vertex.glsl  vertex_flat.glsl
src/: buffers.rs  entity.rs  errors.rs  importer.rs  macros.rs  main.rs  shader.rs  vertex.rs  window.rs
src/buffers/: dynamic_buffer.rs  vertex_array.rs
src/gl_buffers/: attrib_buffer.rs  dynamic_buffer.rs  mod.rs  uniform_buffer.rs  vert_buffer.rs  vertex_array.rs
src/gl_vertex/: mod.rs  traits.rs  vertex_attribs.rs
