[package]
name = "test_2018"
version = "0.1.0"
authors = ["Tilen <tilenlampret1@gmail.com>"]
edition = "2018"

[profile.release]
#lto = true
debug = false
panic = "abort"
codegen-units = 1

[dependencies]
gl = "0.11.0"
glutin = "0.19.0"
azul_glium = "0.22.0"
nalgebra = "0.16.12"
game_time = "0.2.0"
