[package]
name = "test_2018"
version = "0.1.0"
authors = ["Tilen <tilenlampret1@gmail.com>"]
edition = "2018"

[profile.release]
#lto = true
debug = false
panic = "abort"
codegen-units = 1

[dependencies]
gl = "0.11.0"
glutin = "0.19.0"
nalgebra-glm = "0.2.1"
game_time = "0.2.0"
tobj = "0.1.6"
quick-error = "1.2.2"